# stow-rust-server

./: .env  Cargo.toml
src/: main.rs
src/common/: mod.rs
src/routes/: heartbeat.rs  logout.rs  mod.rs  register.rs
src/services/: mod.rs
