[package]
name = "stow-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-extensible-rate-limit = "0.2.1"
actix-web = "4.1.0"

dashmap = "5.4.0"
lazy_static = "1.4.0"
tokio = { version = "1.21.0", features = ["full"] }
uuid = { version = "1.1.2", features = ["v4"] }

# Roblox Open Cloud API
rbxcloud = "0.2.1"

# Serialization
serde = { version = "1.0.144", features = ["derive", "rc"] }
serde_json = "1.0.85"

# Miscellaneous crates
dotenv = "0.15.0"
env_logger = "0.9.0"
log = "0.4.17"

# Database
diesel = "2.0.0"
